--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="body">
   <div class="page">
     <header class="header">
-      <img class="header__logo" src="./images/around_the_us.png" alt="around the u.s.">
+      <img class="header__logo" src="./images/aroundtheus.svg" alt="around the u.s.">
     </header>
     <main>
       <section class="profile">
@@ -30,42 +30,42 @@
         <div class="elements__card">
           <img class="elements__photo" src="./images/kirill-pershin-10884041-unsplash.png" alt="Yosemite Valley">
           <div class="elements__info">
-            <h3 class="elements__description">Yosemite Valley</h3>
+            <h2 class="elements__description">Yosemite Valley</h2>
             <button aria-label="like" class="elements__heart-button" type="button"></button>
           </div>
         </div>
         <div class="elements__card">
           <img class="elements__photo" src="./images/kirill-pershin-1404681-unsplash.png" alt="Lake Louise">
           <div class="elements__info">
-            <h3 class="elements__description">Lake Louise</h3>
+            <h2 class="elements__description">Lake Louise</h2>
             <button aria-label="like" class="elements__heart-button" type="button"></button>
           </div>
         </div>
         <div class="elements__card">
           <img class="elements__photo" src="./images/kirill-pershin-1556355-unsplash.png" alt="Bald Mountains">
           <div class="elements__info">
-            <h3 class="elements__description">Bald Mountains</h3>
+            <h2 class="elements__description">Bald Mountains</h2>
             <button aria-label="like" class="elements__heart-button" type="button"></button>
           </div>
         </div>
         <div class="elements__card">
           <img class="elements__photo" src="./images/kirill-pershin-14046812-unsplash.png" alt="Latemar">
           <div class="elements__info">
-            <h3 class="elements__description">Latemar</h3>
+            <h2 class="elements__description">Latemar</h2>
             <button aria-label="like" class="elements__heart-button" type="button"></button>
           </div>
         </div>
         <div class="elements__card">
           <img class="elements__photo" src="./images/kirill-pershin-15563556-unsplash.png" alt="Vanoise Nationa...">
           <div class="elements__info">
-            <h3 class="elements__description">Vanoise National Park</h3>
+            <h2 class="elements__description">Vanoise National Park</h2>
             <button aria-label="like" class="elements__heart-button" type="button"></button>
           </div>
         </div>
         <div class="elements__card">
           <img class="elements__photo" src="./images/kirill-pershin-1088404-unsplash.png" alt="Lago di Braies">
           <div class="elements__info">
-            <h3 class="elements__description">Lago di Braies</h3>
+            <h2 class="elements__description">Lago di Braies</h2>
             <button aria-label="like" class="elements__heart-button" type="button"></button>
           </div>
         </div>
@@ -74,17 +74,17 @@
     <footer class="footer">
       <p class="footer__copyrights">&copy; 2021 Around The U.S.</p>
     </footer>
-    <section class="edit-profile">
-      <div class="edit-profile__container">
-        <button aria-label="close" class="edit-profile__close-button" type="button"></button>
-        <form name="edit-form" class="edit-profile__form">
-          <h2 class="edit-profile__title">Edit profile</h2>
-          <input class="edit-profile__input edit-profile__input_name" type="text" placeholder="Name">
-          <input class="edit-profile__input edit-profile__input_about" type="text" placeholder="About me">
-          <button aria-label="save" class="edit-profile__save-button" type="submit">Save</button>
+    <div class="popup">
+      <div class="popup__container">
+        <button aria-label="close" class="popup__close-button" type="button"></button>
+        <form name="edit-form" class="popup__form">
+          <h3 class="popup__title">Edit profile</h3>
+          <input class="popup__input popup__input_type_name" type="text" placeholder="Name">
+          <input class="popup__input popup__input_type_about" type="text" placeholder="About me">
+          <button aria-label="save" class="popup__save-button" type="submit">Save</button>
         </form>
       </div>
-    </section>
+    </div>
   </div>
   <script src="./index.js"></script>
 </body>
