--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
     </div>
   </div>
-  <script src="./index.js"></script>
+  <script src="./scripts/index.js"></script>
 </body>
 
 </html>
