delete button problem

--- a/index.html
+++ b/index.html
@@ -20,64 +20,23 @@
         <div class="profile__info">
           <div class="profile__user">
             <h1 class="profile__name">Jacques Cousteau</h1>
-            <button aria-label="edit" class="profile__edit-button" type="button"></button>
+            <button aria-label="edit" class="button profile__edit-button" type="button"></button>
           </div>
           <p class="profile__description">Explorer</p>
         </div>
-        <button aria-label="add" class="profile__add-button" type="button"></button>
+        <button aria-label="add" class="button profile__add-button" type="button"></button>
       </section>
-      <section class="elements">
-        <div class="elements__card">
-          <img class="elements__photo" src="./images/kirill-pershin-10884041-unsplash.png" alt="Yosemite Valley">
-          <div class="elements__info">
-            <h2 class="elements__description">Yosemite Valley</h2>
-            <button aria-label="like" class="elements__heart-button" type="button"></button>
-          </div>
-        </div>
-        <div class="elements__card">
-          <img class="elements__photo" src="./images/kirill-pershin-1404681-unsplash.png" alt="Lake Louise">
-          <div class="elements__info">
-            <h2 class="elements__description">Lake Louise</h2>
-            <button aria-label="like" class="elements__heart-button" type="button"></button>
-          </div>
-        </div>
-        <div class="elements__card">
-          <img class="elements__photo" src="./images/kirill-pershin-1556355-unsplash.png" alt="Bald Mountains">
-          <div class="elements__info">
-            <h2 class="elements__description">Bald Mountains</h2>
-            <button aria-label="like" class="elements__heart-button" type="button"></button>
-          </div>
-        </div>
-        <div class="elements__card">
-          <img class="elements__photo" src="./images/kirill-pershin-14046812-unsplash.png" alt="Latemar">
-          <div class="elements__info">
-            <h2 class="elements__description">Latemar</h2>
-            <button aria-label="like" class="elements__heart-button" type="button"></button>
-          </div>
-        </div>
-        <div class="elements__card">
-          <img class="elements__photo" src="./images/kirill-pershin-15563556-unsplash.png" alt="Vanoise Nationa...">
-          <div class="elements__info">
-            <h2 class="elements__description">Vanoise National Park</h2>
-            <button aria-label="like" class="elements__heart-button" type="button"></button>
-          </div>
-        </div>
-        <div class="elements__card">
-          <img class="elements__photo" src="./images/kirill-pershin-1088404-unsplash.png" alt="Lago di Braies">
-          <div class="elements__info">
-            <h2 class="elements__description">Lago di Braies</h2>
-            <button aria-label="like" class="elements__heart-button" type="button"></button>
-          </div>
-        </div>
+      <ul class="elements">
+      </ul>
       </section>
     </main>
     <footer class="footer">
       <p class="footer__copyrights">&copy; 2021 Around The U.S.</p>
     </footer>
-    <div class="popup">
+    <div class="popup" id="edit-popup">
       <div class="popup__container">
         <button aria-label="close" class="popup__close-button" type="button"></button>
-        <form name="edit-form" class="popup__form">
+        <form name="edit-form" class="popup__form" id="edit-form">
           <h3 class="popup__title">Edit profile</h3>
           <input class="popup__input popup__input_type_name" type="text" placeholder="Name">
           <input class="popup__input popup__input_type_about" type="text" placeholder="About me">
@@ -85,8 +44,36 @@
         </form>
       </div>
     </div>
+    <div class="popup" id="add-popup">
+      <div class="popup__container">
+        <button aria-label="close" class="popup__close-button" type="button"></button>
+        <form name="add-form" class="popup__form" id="add-form">
+          <h3 class="popup__title">New place</h3>
+          <input class="popup__input popup__input_type_title" id="input-card-title" type="text" placeholder="Title">
+          <input class="popup__input popup__input_type_img" id="input-card-img" type="text" placeholder="Image link">
+          <button aria-label="create" class="popup__save-button" type="submit">Create</button>
+        </form>
+      </div>
+    </div>
+    <div class="popup" id="photo-popup">
+      <div class="popup__container">
+        <button aria-label="close" class="popup__close-button" type="button"></button>
+        <div class="popup__img"></div>
+        <figcaption class="popup__figcaption"></figcaption>
+      </div>
+    </div>
   </div>
-  <script src="./scripts/index.js"></script>
+  <script src="./scripts/index.js" defer></script>
+  <template id="card-template">
+    <li class="card">
+      <button class="button card__delete-button"></button>
+      <div class="card__photo"></div>
+      <div class="card__info">
+        <h2 class="card__description"></h2>
+        <button aria-label="like" class="button card__heart-button" id="heart-button" type="button"></button>
+      </div>
+    </li>
+  </template>
 </body>
 
 </html>
