--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <div class="profile__info">
           <div class="profile__user">
             <h1 class="profile__name">Jacques Cousteau</h1>
-            <button aria-label="edit" class="button profile__edit-button" type="button"></button>
+            <button aria-label="edit" class="cursor-pointer profile__edit-button" type="button"></button>
           </div>
           <p class="profile__description">Explorer</p>
         </div>
-        <button aria-label="add" class="button profile__add-button" type="button"></button>
+        <button aria-label="add" class="cursor-pointer profile__add-button" type="button"></button>
       </section>
       <ul class="elements">
       </ul>
@@ -35,29 +35,29 @@
     </footer>
     <div class="popup" id="edit-popup">
       <div class="popup__container">
-        <button aria-label="close" class="popup__close-button" type="button"></button>
+        <button aria-label="close" class="cursor-pointer popup__close-button" type="button"></button>
         <form name="edit-form" class="popup__form" id="edit-form">
           <h3 class="popup__title">Edit profile</h3>
           <input class="popup__input popup__input_type_name" type="text" placeholder="Name">
           <input class="popup__input popup__input_type_about" type="text" placeholder="About me">
-          <button aria-label="save" class="popup__save-button" type="submit">Save</button>
+          <button aria-label="save" class="cursor-pointer popup__save-button" type="submit">Save</button>
         </form>
       </div>
     </div>
     <div class="popup" id="add-popup">
       <div class="popup__container">
-        <button aria-label="close" class="popup__close-button" type="button"></button>
+        <button aria-label="close" class="cursor-pointer popup__close-button" type="button"></button>
         <form name="add-form" class="popup__form" id="add-form">
           <h3 class="popup__title">New place</h3>
           <input class="popup__input popup__input_type_title" id="input-card-title" type="text" placeholder="Title">
           <input class="popup__input popup__input_type_img" id="input-card-img" type="text" placeholder="Image link">
-          <button aria-label="create" class="popup__save-button" type="submit">Create</button>
+          <button aria-label="create" class="cursor-pointer popup__save-button" type="submit">Create</button>
         </form>
       </div>
     </div>
     <div class="popup" id="photo-popup">
-      <div class="popup__container">
-        <button aria-label="close" class="popup__close-button" type="button"></button>
+      <div class="popup__container popup__container_photo">
+        <button aria-label="close" class="cursor-pointer popup__close-button" type="button"></button>
         <div class="popup__img"></div>
         <figcaption class="popup__figcaption"></figcaption>
       </div>
@@ -66,11 +66,11 @@
   <script src="./scripts/index.js" defer></script>
   <template id="card-template">
     <li class="card">
-      <button class="button card__delete-button"></button>
-      <div class="card__photo"></div>
+      <button class="cursor-pointer card__delete-button"></button>
+      <div class="cursor-pointer card__photo"></div>
       <div class="card__info">
         <h2 class="card__description"></h2>
-        <button aria-label="like" class="button card__heart-button" id="heart-button" type="button"></button>
+        <button aria-label="like" class="cursor-pointer card__heart-button" id="heart-button" type="button"></button>
       </div>
     </li>
   </template>
