project 5 first submission

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       </div>
     </div>
     <div class="popup" id="photo-popup">
-      <div class="popup__container popup__container_photo">
+      <div class="popup__container">
         <button aria-label="close" class="cursor-pointer popup__close-button" type="button"></button>
-        <div class="popup__img"></div>
+        <img class="popup__img" src=" " alt=" ">
         <figcaption class="popup__figcaption"></figcaption>
       </div>
     </div>
