project 5 first submission

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       </section>
       <ul class="elements">
       </ul>
-      </section>
     </main>
     <footer class="footer">
       <p class="footer__copyrights">&copy; 2021 Around The U.S.</p>
@@ -59,7 +58,7 @@
       <div class="popup__container">
         <button aria-label="close" class="cursor-pointer popup__close-button" type="button"></button>
         <img class="popup__img" src=" " alt=" ">
-        <figcaption class="popup__figcaption"></figcaption>
+        <p class="popup__figcaption"></p>
       </div>
     </div>
   </div>
